--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link href="https://fonts.googleapis.com/css?family=Satisfy|Monoton" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Signika|Monoton" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
