--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <link href="https://fonts.googleapis.com/css?family=Signika|Monoton" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <title>React App</title>
+    <title>Shaping Functions</title>
   </head>
   <body>
     <noscript>
